# apps/api/src/Vexa.Application/DTOs/Auth/VerifyResetPasswordTokenRequest.cs
@@ -1,0 +1,6 @@
+namespace Vexa.Application.DTOs;
+
+public class VerifyResetPasswordTokenRequest
+{
+    public string Token { get; set; } = string.Empty;
+}
